test/testdata/classes/methods/duplicate_error.lox
class Foo {
  bar() {}
  static bar() {}

  // error: 'bar' has already been declared
  // lint error: 'bar' has already been declared
  bar() {}
}

_ = Foo;
